Kubernetes Services, Deployments, SS, Ingress

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ venv/
 backend/backend/__pycache__/
 backend/property/__pycache__/
 backend/property/migrations/__pycache__/
+kubernetes/secrets.yaml
