--- a/kubernetes/traefik-ingress.yaml
+++ b/kubernetes/traefik-ingress.yaml
@@ -21,7 +21,7 @@ spec:
     - host: localhost
       http:
         paths:
-          - path: /api/{path:.*}
+          - path: /api
             pathType: Prefix
             backend:
               service:
