--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -4,4 +4,4 @@ metadata:
   name: property-config
   namespace: property-app
 data:
-  DJANGO_ALLOWED_HOSTS: "backend.property-app.svc.cluster.local,localhost,127.0.0.1,10.42.0.0/16"
+  ALLOWED_HOSTS: "backend.property-app.svc.cluster.local,localhost,127.0.0.1,10.42.0.0/16"
