--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -24,7 +24,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: property-secrets
-                  key: POSTGRES_DB
+                  key: DJANGO_DB_NAME
             - name: DJANGO_DB_USER
               valueFrom:
                 secretKeyRef:
@@ -50,31 +50,9 @@ spec:
             - configMapRef:
                 name: property-config
           env:
-            - name: DJANGO_DB_HOST
-              value: postgres-service
-            - name: DJANGO_DB_PORT
-              value: "5432"
             - name: PYTHONUNBUFFERED
               value: "1"
-            - name: DJANGO_DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_DB
-            - name: DJANGO_DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_USER
-            - name: DJANGO_DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_PASSWORD
-            - name: FORCE_RELOAD_TIMESTAMP
-              value: "2025-06-27-1545"
 
-          # TODO: use Gunicorn/uWSGI in production.
-          # entrypoint: ["/usr/local/bin/gunicorn"]
-          # args: ["project.wsgi:application", "--bind", "0.0.0.0:8000"]
-          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+      command: ["gunicorn"]
+      args:
+        ["backend.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "3"]
