--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       initContainers:
         - name: migrate-db
-          image: blagojaovezoski/property-backend:latest
+          image: blagojaovezoski/property-backend:96a1dc5
           command: ["python", "manage.py", "migrate"]
           env:
             - name: DJANGO_DB_NAME
@@ -41,7 +41,7 @@ spec:
               value: "5432"
       containers:
         - name: django-backend
-          image: blagojaovezoski/property-backend:latest
+          image: blagojaovezoski/property-backend:96a1dc5
           ports:
             - containerPort: 8000
           envFrom:
@@ -50,31 +50,14 @@ spec:
             - configMapRef:
                 name: property-config
           env:
-            - name: DJANGO_DB_HOST
-              value: postgres-service
-            - name: DJANGO_DB_PORT
-              value: "5432"
             - name: PYTHONUNBUFFERED
               value: "1"
-            - name: DJANGO_DB_NAME
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_DB
-            - name: DJANGO_DB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_USER
-            - name: DJANGO_DB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: property-secrets
-                  key: POSTGRES_PASSWORD
-            - name: FORCE_RELOAD_TIMESTAMP
-              value: "2025-06-27-1545"
-
-          # TODO: use Gunicorn/uWSGI in production.
-          # entrypoint: ["/usr/local/bin/gunicorn"]
-          # args: ["project.wsgi:application", "--bind", "0.0.0.0:8000"]
-          command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+          command: ["gunicorn"]
+          args:
+            [
+              "backend.wsgi:application",
+              "--bind",
+              "0.0.0.0:8000",
+              "--workers",
+              "3",
+            ]
