--- a/kubernetes/frontend/deployment.yaml
+++ b/kubernetes/frontend/deployment.yaml
@@ -17,9 +17,12 @@ spec:
     spec:
       containers:
         - name: react-frontend
-          image: blagojaovezoski/property-frontend:latest
+          image: blagojaovezoski/property-frontend:96a1dc5
           ports:
             - containerPort: 80
+          envFrom:
+            - configMapRef:
+                name: property-config
           livenessProbe:
             httpGet:
               path: /
@@ -34,6 +37,3 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 5
             timeoutSeconds: 3
-          env:
-            - name: FORCE_RELOAD_TIMESTAMP
-              value: "2025-06-27-1545"
