--- a/kubernetes/traefik-ingress.yaml
+++ b/kubernetes/traefik-ingress.yaml
@@ -35,3 +35,13 @@ spec:
                 name: frontend-service
                 port:
                   number: 80
+    - host: api.local
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: backend-service
+                port:
+                  number: 8000
