--- a/kubernetes/traefik-ingress.yaml
+++ b/kubernetes/traefik-ingress.yaml
@@ -35,7 +35,7 @@ spec:
                 name: frontend-service
                 port:
                   number: 80
-    - host: api.local
+    - host: api.localhost
       http:
         paths:
           - path: /
