Frontend api.localhost

--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -7,3 +7,4 @@ data:
   ALLOWED_HOSTS: "backend.property-app.svc.cluster.local,localhost,127.0.0.1,10.42.0.0/16,api.localhost"
   DEBUG: "False"
   VITE_API_BASE_URL: "http://api.localhost"
+  DJANGO_DB_HOST: postgres-service
