--- a/kubernetes/configmap.yaml
+++ b/kubernetes/configmap.yaml
@@ -8,3 +8,5 @@ data:
   DEBUG: "False"
   VITE_API_BASE_URL: "http://api.localhost"
   DJANGO_DB_HOST: postgres-service
+  CORS_ALLOWED_ORIGINS: "http://localhost,http://api.localhost"
+  CSRF_TRUSTED_ORIGINS: "http://localhost,http://api.localhost"
