--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -49,6 +49,17 @@ services:
       - backend
     volumes:
       - ./frontend:/app
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    depends_on:
+      - backend
 
 volumes:
   property_data:
