--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "google-map-react": "^2.2.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
