--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 venv/
 .env
-backend/backend/__pycache__/
-backend/property/__pycache__/
-backend/property/migrations/__pycache__/
 kubernetes/secrets.yaml
+__pycache__
