Traefik fix, deployment resources, minor f-end fix

--- a/kubernetes/backend/deployment.yaml
+++ b/kubernetes/backend/deployment.yaml
@@ -17,8 +17,15 @@ spec:
     spec:
       initContainers:
         - name: migrate-db
-          image: blagojaovezoski/property-backend:006a481
+          image: blagojaovezoski/property-backend:4b8bb98
           command: ["python", "manage.py", "migrate"]
+          resources:
+            requests:
+              cpu: "50m"
+              memory: "64Mi"
+            limits:
+              cpu: "100m"
+              memory: "128Mi"
           env:
             - name: DJANGO_DB_NAME
               valueFrom:
@@ -39,9 +46,29 @@ spec:
               value: postgres-service
             - name: DJANGO_DB_PORT
               value: "5432"
+            - name: AWS_STORAGE_BUCKET_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_STORAGE_BUCKET_NAME
+            - name: AWS_S3_REGION_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_S3_REGION_NAME
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_ACCESS_KEY_ID
       containers:
         - name: django-backend
-          image: blagojaovezoski/property-backend:006a481
+          image: blagojaovezoski/property-backend:4b8bb98
           ports:
             - containerPort: 8000
           envFrom:
@@ -52,6 +79,33 @@ spec:
           env:
             - name: PYTHONUNBUFFERED
               value: "1"
+            - name: AWS_STORAGE_BUCKET_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_STORAGE_BUCKET_NAME
+            - name: AWS_S3_REGION_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_S3_REGION_NAME
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: aws-credentials
+                  key: AWS_ACCESS_KEY_ID
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "250m"
+              memory: "256Mi"
           command: ["gunicorn"]
           args:
             [
