WYSIWYG editor in profile

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "react-simple-wysiwyg": "^3.4.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1"
   },
