--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       sha: ${{ steps.vars.outputs.sha }}
-      
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -53,3 +53,25 @@ jobs:
           tags: |
             blagojaovezoski/property-frontend:${{ steps.vars.outputs.sha }}
             blagojaovezoski/property-frontend:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Deploy Backend to AWS App Runner
+        run: |
+          aws apprunner start-deployment \
+            --service-arn ${{ secrets.BACKEND_APP_RUNNER_ARN }}
+
+      # - name: Deploy Frontend to AWS App Runner
+      #   run: |
+      #     aws apprunner start-deployment \
+      #       --service-arn ${{ secrets.FRONTEND_APP_RUNNER_ARN }}
