--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.3",
     "google-map-react": "^2.2.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.522.0",
