--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,6 +2,13 @@ FROM python:3.13-slim-bookworm
 
 WORKDIR /app
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    libglib2.0-0 \
+    pango1.0-tools \
+    && rm -rf /var/lib/apt/lists/*
+
+
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
 
