--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,8 +6,10 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends \
     libglib2.0-0 \
     pango1.0-tools \
+    libcairo2 \
+    libpango-1.0-0 \
+    libgdk-pixbuf2.0-0 \
     && rm -rf /var/lib/apt/lists/*
-
 
 COPY requirements.txt /app/
 RUN pip install --no-cache-dir -r requirements.txt
